--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
 		<![endif]-->
 	</head>
 	<body>
-		<h1>営業中のコインランドリー</h1>
+		<h2>営業中のコインランドリー</h2>
 
+      <select class="form-control" id="select_area">
+        <option>aaa</option>
+        <option>aaa</option>
+        <option>aaa</option>
+
+      </select>
     <div class="dropdown">
 
       <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
