--- a/index.html
+++ b/index.html
@@ -4,39 +4,29 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Bootstrapの基本テンプレート</title>
+		<title>熊本県内の営業中コインランドリー</title>
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
 	</head>
 	<body>
 		<h2>営業中のコインランドリー</h2>
 
-      <select class="form-control" id="select_area">
-        <option>aaa</option>
-        <option>aaa</option>
-        <option>aaa</option>
+    <select class="form-control" id="select_area">
 
-      </select>
-    <div class="dropdown">
-
-      <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
-        ドロップダウン
-  		  <span class="caret"></span>
-      </button>
-    	<ul class="dropdown-menu" role="menu">
-    		<li role="presentation"><a href="#">リンクのリスト１</a></li>
-    		<li role="presentation"><a href="#">リンクのリスト２</a></li>
-    		<li role="presentation"><a href="#">リンクのリスト３</a></li>
-    	</ul>
-    </div>
+    </select>
 
 
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="js/script.js"></script>
+
 		<script src="js/bootstrap.min.js"></script>
+
+
 
 	</body>
 </html>
