--- a/index.html
+++ b/index.html
@@ -12,15 +12,23 @@
 		<![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 
+    <link href="css/laundromat.css" rel="stylesheet">
+
 	</head>
 	<body>
 		<h2>営業中のコインランドリー</h2>
 
-    <select class="form-control" id="select_area">
+    <div class="container-fluid">
+      <div class="row">
+        <select class="form-control" id="select_area">
+        </select>
+      </div>
 
-    </select>
-
-
+      <div class="row">
+        <ul id="laundromat-list" class="list-group">
+        </ul>
+      </div>
+    </div>
 
     <script src="js/script.js"></script>
 
