--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 	</head>
 	<body>
+    <div id="main">
 		<h4>営業中のコインランドリー</h4>
 
     <div class="container-fluid">
@@ -35,6 +36,6 @@
 		<script src="js/bootstrap.min.js"></script>
 
 
-
+  </div>
 	</body>
 </html>
