--- a/map.html
+++ b/map.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" style="height:100%">
 
 <head>
 	<meta charset="utf-8">
@@ -11,39 +11,16 @@
 			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<link href="css/laundromat.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="http://maps.googleapis.com/maps/api/js?v=3"></script>
+  <link href="css/laundromat.css" rel="stylesheet">
 
 </head>
+<body style="height:100%">
+  <div id="map-canvas" style="width : 100%; height : 100%;"></div>
 
-<body>
-	<div id="main">
-		<h5 id="title">営業中のコインランドリー</h5>
-
-		<div class="container-fluid">
-
-			<!--
-			<div class="row" id="all-map">
-				<h4>■現在地から探す</h4>
-				<a class="btn btn btn-default btn-primary" target="_blank" href="map.html"><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span> 地図を表示</a>
-			</div> -->
-			<div class="row">
-				<!-- <h4>■地域から探す</h4> -->
-				<select class="form-control" id="select_area">
-				</select>
-				<ul id="laundromat-list" class="list-group">
-				</ul>
-			</div>
-
-		</div>
-
-	</dv>
-
-	<script src="js/script.js"></script>
-
-	<script src="js/bootstrap.min.js"></script>
-
-	<script>
+  <script src="js/script-map.js"></script>
+  <script>
 		(function(i, s, o, g, r, a, m) {
 			i['GoogleAnalyticsObject'] = r;
 			i[r] = i[r] || function() {
@@ -59,6 +36,7 @@
 		ga('create', 'UA-76558567-1', 'auto');
 		ga('send', 'pageview');
 	</script>
+
 </body>
 
 </html>
