--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
 	<div id="main">
-		<h5 id="title">営業中のコインランドリー</h5>
+		<h5 id="title">熊本県内の営業中のコインランドリー</h5>
 
 		<div class="container-fluid">
 
