--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
-	<title>熊本県内の営業中コインランドリー</title>
+	<title>熊本県内で営業中のコインランドリー</title>
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 	<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -18,7 +18,7 @@
 
 <body>
 	<div id="main">
-		<h5 id="title">熊本県内の営業中のコインランドリー</h5>
+		<h5 id="title">熊本県内で営業中のコインランドリー</h5>
 
 		<div class="container-fluid">
 
