--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<a class="btn btn btn-default btn-danger" target="_blank" href="map.html"><span class="glyphicon glyphicon-new-window" aria-hidden="true"></span> 地図を表示</a>
 			</div>
 			<div class="row">
-				<h4>■地域から探す</h4>
+				<h4>■地区から探す</h4>
 				<select class="form-control" id="select_area">
 				</select>
 				<ul id="laundromat-list" class="list-group">
